# debate

./: .gitignore  README.md  debate.py  install-skills.sh  install.py  log_centric_refactor_plan.md  new_debate.py  pyproject.toml  requirements.txt  template.md
.claude/: CLAUDE.md
.claude/commands/: debate.md  debate.md.bak  finegrained-check.md
debate_tool/: __init__.py  __main__.py  compact_engine.py  compact_state.py  config_ops.py  core.py  core_loop.py  cot.py  cross_exam.py  debug_log.py  llm_client.py  log_io.py  log_util.py  resume.py  run.py  runner.py  session.py  stance.py  steps.py  topic_parser.py  ui.py  wizard.py
debate_tool/web/: __init__.py  __main__.py  app.py  live.py
docs/: mechanism_evaluation.md  my-prompt.md  psudo.hs  test_coverage.md  v2_mechanism_roadmap.md
docs/archive/: log_centric_refactor_plan_v2.md
examples/court-mode/: topic1.md  topic1_debate_log.md  topic1_debate_summary.checkpoint1.md  topic1_debate_summary.checkpoint2.md  topic1_debate_summary.md
examples/explore/: explore_agent.md  explore_agent_debate_log.md  explore_agent_debate_summary.md  explore_agent_debate_summary.old.md  explore_as_agent.md  explore_compare.md  explore_compare_debate_log.md  explore_compare_debate_summary.md  msg_prompt.md
requirements/: all.txt  cli.txt  core.txt  web.txt
scripts/: README.md  convert_json_log_to_md.py  debate_polish.py  migrate_v1_to_v2.py  opencode_proxy.py  smoke_e2e.py  test_consistency_real_api.py  test_fallback_modes.py  test_full.py
scripts/polish/: README.md  (+5 more)
scripts/polish/haskell-polish/: new-polish.cabal
scripts/polish/haskell-polish/app/: Check.hs  Polish.hs
scripts/polish/haskell-polish/src/: CheckPipeline.hs  DebateTool.hs  Llm.hs  Log.hs  PolishLoop.hs  Prompt.hs  Types.hs  Util.hs
test/: README.md  golden_compare.py  mock_routes.py  mock_server.py  structural_checks.py  test.py
tests/: test_runner_json_logs.py
(+212 files in other folders)
