cabal-version:      3.0
name:               new-polish
version:            0.1.0.0
build-type:         Simple

common shared
  default-language: GHC2021
  default-extensions:
    MultiWayIf
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    RecordWildCards
    NamedFieldPuns
    StrictData
  ghc-options: -Wall -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:
    base >= 4.18 && < 5,
    mtl >= 2.3,
    transformers >= 0.6,
    bytestring >= 0.11,
    text >= 2.0,
    containers >= 0.6,
    directory >= 1.3,
    filepath >= 1.4,
    process >= 1.6,
    time >= 1.12,
    aeson >= 2.1,
    http-client >= 0.7,
    http-client-tls >= 0.3,
    http-types >= 0.12,
    vector >= 0.13,
    temporary >= 1.3

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Types
    Log
    Prompt
    Llm
    CheckPipeline
    PolishLoop
    DebateTool
    Util

executable check
  import: shared
  hs-source-dirs: app
  main-is: Check.hs
  build-depends: new-polish
  ghc-options: -threaded

executable polish
  import: shared
  hs-source-dirs: app
  main-is: Polish.hs
  build-depends: new-polish
  ghc-options: -threaded
